# mvSync

./: CMakeLists.txt  LICENSE  README.md
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp
